forge/tests/error/bad_option_type.frg
#lang forge 

option logtranslation "hello"